syntax = "proto3";

package home;

option java_package = "com.proto.home";
option java_multiple_files = true;

enum TempSentiment {
    COLD = 0;
    WARM = 1;
    HOT = 2;
}

enum Orientation {
    PORTRAIT = 0;
    LANDSCAPE = 1;
}

enum Action {
    ON = 0;
    OFF = 1;
}

// BATH
message Bath {
    string title = 1;
    double time = 2;
    TempSentiment temp_sentiment = 3;
}

message BathRequest {
    Bath bath = 1;
}

message BathResponse {
    string result = 1;
}

// LIGHT
message Light {
    Action light_action = 1;
}

message LightRequest {
    Light light = 1;
}

message LightResponse {
    string result = 1;
}

// PRINTER
message Printer {
    string name = 1;
    string document = 2;
    int32 num_pages = 3;
    Orientation orientation = 4;
}

message PrinterRequest {
    Printer printer = 1;
}

message PrinterResponse {
    string result = 1;
}

// VACUUM
message Vacuum {
    string action = 1;
}

message VacuumRequest {
    Vacuum vacuum = 1;
}

message VacuumResponse {
    string result = 1;
}

message VacuumWithDeadlineRequest {
    Vacuum vacuum = 1;
}

message VacuumWithDeadlineResponse {
    string result = 1;
}

service HomeService {

    rpc Bath(BathRequest) returns (BathResponse); // simple

    rpc Light(stream LightRequest) returns (LightResponse) {}; // client streaming

    rpc Printer(PrinterRequest) returns (stream PrinterResponse) {}; // server streaming

    rpc Vacuum(stream VacuumRequest) returns (stream VacuumResponse) {}; // bidirectional streaming

    rpc VacuumWithDeadline(VacuumWithDeadlineRequest) returns (VacuumWithDeadlineResponse) {}; // simple stream with deadline

}